Fix webpack-dev-server hot reload GET bug where on hot reload, server couldn't find subdirectories. Fix index bug where paragraph text was overlapping with footer. Update work page to have imgs & links to work/github projects.

--- a/frontend/src/stylesheets/styles.css
+++ b/frontend/src/stylesheets/styles.css
@@ -30,7 +30,7 @@
 
 #bodyDiv {
     padding-top: 1px;
-    height: 75vh;
+    height: 50em;
     margin-top: 20px;
     /* margin-bottom: 20px; */
     text-align: center;
@@ -41,6 +41,12 @@
     margin-left: 20%;
     margin-right: 20%;
     font-size: 20px;
+}
+
+#nihon-kawa {
+    /* border-color: black;
+    border-width: 1px;
+    border-style: solid; */
 }
 
 h1 {
